# Socketor

./: .gitignore  README.md  Socketor.sln  WEBSOCKET_API.md  WEBSOCKET_BLAZOR_COMPONENT.md  WEBSOCKET_REALTIME_EVENTS.md
DevDocs/: TCP_SERVER.md  WEBSOCKET_API.md  WEBSOCKET_BLAZOR_COMPONENT.md  WEBSOCKET_REALTIME_EVENTS.md
SocketorBlazor/: .gitignore  Folder.DotSettings  Program.cs  Socketor.csproj  _Imports.razor
SocketorBlazor/Components/: GroupBox.razor  GroupBox.razor.css  HorizontalSplit.razor  HorizontalSplit.razor.css  MessageBox.razor  MessageBox.razor.css  MessageBoxItem.razor  MessageBoxItem.razor.css  SenderBox.razor  SenderBox.razor.css  ToolBar.razor  ToolBar.razor.css  VerticalSplit.razor  VerticalSplit.razor.css
SocketorBlazor/Components/Backends/: TcpServer.razor  WebSocketClient.razor
SocketorBlazor/DataModel/: ActionResultDto.cs  BackendMessageDto.cs  MessageItemDto.cs
SocketorBlazor/Pages/: MainView.razor  MainView.razor.css  TcpClient.razor  TcpServer.razor  TcpServer.razor.css  UdpClient.razor  WsClient.razor  WsClient.razor.css
SocketorBlazor/Properties/: launchSettings.json
SocketorBlazor/Shared/: MainLayout.razor  MainLayout.razor.css  NavMenu.razor  NavMenu.razor.css  WorkspaceLayout.razor  WorkspaceLayout.razor.css
SocketorBlazor/Utilities/: IMessageBackend.cs
SocketorBlazor/wwwroot/: index.html
SocketorBlazor/wwwroot/alopex-design/: alopex.css
SocketorBlazor/wwwroot/css/: antd.css  app.css  comps.css
SocketorBlazor/wwwroot/js/: socketor.js
src/: App.razor  Program.cs  Socketor.csproj  _Imports.razor
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs  socketor_tcp_server.rs  tcp_client.rs  tcp_server.rs  udp_client.rs  websocket_server.rs
src-tauri/src/services/: communication.rs  tcp_client.rs  tcp_server.rs
src/Components/: TcpClientComp.razor  TcpClientComp.razor.css  TcpServerComp.razor  TcpServerComp.razor.css  UdpClientComp.razor  UdpClientComp.razor.css  WebSocketClientComp.razor  WebSocketClientComp.razor.css  WebSocketServerComp.razor  WebSocketServerComp.razor.css
src/Components/Widgets/: AppSettingsPopover.razor  AppSettingsPopover.razor.css  MessageBox.razor  MessageBox.razor.css  MessageItem.razor  MessageItem.razor.css  SendBox.razor
src/DataModel/: MessageData.cs
src/DataModel/Configs/: AppConnectionsConfig.cs  IConnectionConfig.cs  MessageBoxConfig.cs  SendBoxConfig.cs  TcpClientConfig.cs  TcpServerConfig.cs  UdpClientConfig.cs  (+2 more)
src/Locales/: en-US.json  zh-CN.json
src/Pages/: Home.razor  Home.razor.css  TcpClient.razor  TcpServer.razor  UdpClient.razor  UdpClient.razor.css  WebSocketClient.razor  WebSocketServer.razor  WebSocketServer.razor.css
src/Utilities/: CultureService.cs
src/wwwroot/: index.html
test-scripts/: tcp_test_client.py  tcp_test_server.py  udp_test_client.py  udp_test_server.py
(+7 files in other folders)
